# cuda-proj-tmpl

./: .gitignore  CMakeLists.txt  README.md
cmake/: initBuildType.cmake
cmake/cuda/: FindCUDALibs.cmake
src/: CMakeLists.txt  saxpy.cu
src/common/: CMakeLists.txt  OpenMPTimer.cpp  OpenMPTimer.h  cuda_error.h  my_cuda_utils.cu  my_cuda_utils.h
